// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedSidebar correctly expand users menu 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Administration"
  >
    <SubMenu
      title="User Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users"
        >
          Users
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/groups"
        >
          User Groups
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/roles"
        >
          User Roles
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Location Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Hierarchy
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/all"
        >
          All Locations
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Organization Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams"
        >
          Organizations
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams/team-assignment"
        >
          Organization Assignment
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/quest"
      >
        Questionnaire Management
      </Link>
    </MenuItem>
  </SubMenu>,
  <MenuItem
    icon={<UploadIcon />}
  >
    <Link
      className="admin-link"
      to="/import"
    >
      Data Imports
    </Link>
  </MenuItem>,
]
`;

exports[`components/ConnectedSidebar displays menu links for All Enabled modules 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Administration"
  >
    <SubMenu
      title="User Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users"
        >
          Users
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/groups"
        >
          User Groups
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/roles"
        >
          User Roles
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Location Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Hierarchy
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/all"
        >
          All Locations
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Organization Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams"
        >
          Organizations
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams/team-assignment"
        >
          Organization Assignment
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/quest"
      >
        Questionnaire Management
      </Link>
    </MenuItem>
  </SubMenu>,
  <MenuItem
    icon={<UploadIcon />}
  >
    <Link
      className="admin-link"
      to="/import"
    >
      Data Imports
    </Link>
  </MenuItem>,
]
`;

exports[`components/ConnectedSidebar renders the ConnectedSidebar component 1`] = `
Object {
  "children": Array [
    <div
      className="ant-layout-sider-children"
    >
      <div
        className="logo main-logo"
      >
        <Link
          id="main-logo"
          to="/"
        >
          <img
            alt="The logo"
            src="https://github.com/OpenSRP/web/raw/master/app/src/assets/images/opensrp-logo-color.png"
          />
        </Link>
        <Button
          hidden={true}
          id="collapsed-logo"
          onClick={[Function]}
          type="link"
        >
          <img
            alt="The logo"
            src="https://github.com/OpenSRP/web/raw/main/app/src/assets/images/opensrp2-logo-small.png"
          />
        </Button>
        <Button
          className="collapse-icon"
          onClick={[Function]}
          type="link"
        >
          <ForwardRef(LeftOutlined) />
        </Button>
      </div>
      <Menu
        className="menu-dark"
        defaultOpenKeys={Array []}
        defaultSelectedKeys={
          Array [
            "",
          ]
        }
        mode="inline"
        onOpenChange={[Function]}
        openKeys={Array []}
        selectedKeys={
          Array [
            "",
          ]
        }
        theme="dark"
      >
        <SubMenu
          icon={<ForwardRef(DashboardOutlined) />}
          title="Administration"
        >
          <SubMenu
            title="User Management"
          >
            <MenuItem>
              <Link
                className="admin-link"
                to="/admin/users"
              >
                Users
              </Link>
            </MenuItem>
            <MenuItem>
              <Link
                className="admin-link"
                to="/admin/users/groups"
              >
                User Groups
              </Link>
            </MenuItem>
            <MenuItem>
              <Link
                className="admin-link"
                to="/admin/users/roles"
              >
                User Roles
              </Link>
            </MenuItem>
          </SubMenu>
          <SubMenu
            title="Location Management"
          >
            <MenuItem>
              <Link
                className="admin-link"
                to="/admin/location/unit"
              >
                Hierarchy
              </Link>
            </MenuItem>
            <MenuItem>
              <Link
                className="admin-link"
                to="/admin/location/all"
              >
                All Locations
              </Link>
            </MenuItem>
          </SubMenu>
          <SubMenu
            title="Organization Management"
          >
            <MenuItem>
              <Link
                className="admin-link"
                to="/admin/teams"
              >
                Organizations
              </Link>
            </MenuItem>
          </SubMenu>
          <MenuItem>
            <Link
              className="admin-link"
              to="/quest"
            >
              Questionnaire Management
            </Link>
          </MenuItem>
        </SubMenu>
        <MenuItem
          icon={<UploadIcon />}
        >
          <Link
            className="admin-link"
            to="/import"
          >
            Data Imports
          </Link>
        </MenuItem>
      </Menu>
    </div>,
    null,
  ],
  "className": "ant-layout-sider ant-layout-sider-dark layout-sider",
  "style": Object {
    "flex": "0 0 275px",
    "maxWidth": "275px",
    "minWidth": "275px",
    "width": "275px",
  },
}
`;

exports[`components/ConnectedSidebar renders user managment menu for users with appropriate role 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Administration"
  >
    <SubMenu
      title="User Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users"
        >
          Users
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/groups"
        >
          User Groups
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/roles"
        >
          User Roles
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Location Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Hierarchy
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/all"
        >
          All Locations
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Organization Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams"
        >
          Organizations
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/quest"
      >
        Questionnaire Management
      </Link>
    </MenuItem>
  </SubMenu>,
  <MenuItem
    icon={<UploadIcon />}
  >
    <Link
      className="admin-link"
      to="/import"
    >
      Data Imports
    </Link>
  </MenuItem>,
]
`;
